# cpp-matrix-lib

./: .clang-tidy  CMakeLists.txt  Makefile
.devcontainer/: devcontainer.json
include/: s21_matrix_oop.hpp
src/: s21_matrix_oop.cpp
task/: README.md
test/: CMakeLists.txt  gtest.cpp
